--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -773,8 +773,58 @@ gap: 30px;
     width: 100%;
     margin: 0 auto;
 }
+/* media query from 375 t0 400 */
 
-@media screen and (max-width:390px){
+
+@media screen and (max-width:375px) {
+    body{
+        background-image: none;
+        background-color: #000;
+    }
+    .content{
+        width:350px;
+    }
+    .content_header{
+        font-size: 16px;
+    }
+    .register_link{
+        width: 350px;
+        
+    }
+    .number img{
+        width: 100%;
+    }
+    .btn{
+        width: 100%;
+    }
+    .styledform img{
+        width: 20px;
+    }
+    .lock{
+        flex: 0;
+    }
+    .number > #password{
+        width: flex;
+         flex: 1;
+    }
+    .auditionBox{
+        height: calc(100% - 20px);
+        gap: 10px;
+    }
+    .abox{
+        
+        width: 325px !important;
+        padding: 0px 20px 3px 20px !important;
+    }
+    .footer_social{
+        padding: 5px;
+    }
+    .social_icon img{
+        width: 18px;
+    }
+}
+
+@media screen and (width:390px){
     body{
         background-image: none;
         background-color: #000;
@@ -810,6 +860,12 @@ gap: 30px;
         
         width: 350px !important;
         padding: 0px 20px 3px 20px !important;
+    }
+    .footer_social{
+        padding: 5px;
+    }
+    .social_icon img{
+        width: 18px;
     }
     
 }
