--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -100,48 +100,48 @@
 
         </div>
 
-    </div>
-    <footer>
-        <div class="querys">
-            <a href="#">let's talk</a>
-        </div>
+        <footer>
+            <div class="querys">
+                <a href="#">let's talk</a>
+            </div>
 
-        <div class="footerlinks">
-            <div class="hotline">
-                <h5>service hotline</h5>
-                <p>Thelma Amacree</p>
-                <a href="mailto:Afrinolly@gmail.com">Afrinolly@gmail.com</a>
-            </div>
-            <div class="pr">
-                <h5>public relations inquiries</h5>
-                <p>Ayo</p>
-                <a href="mailto:Macleanafrinolly@gmail.com">Afrinolly@gmail.com</a>
-            </div>
-            <div class="headquaters">
-                <h5>headquaters</h5>
-                <p>No. 16, Sophie Kuye,Pedro, Lagos.+2347066453516</p>
-            </div>
-            <div class="hi">
-                <h5>Say hi</h5>
-                <a href="mailto:info@afrinolly">info@afrinolly</a>
-            </div>
-            <div class="social">
-                <h5>social</h5>
-                <p>You can always find us on social.</p>
-                <div class="socials">
-                    <img src="" alt="youtube">
-                    <img src="" alt="instagram">
-                    <img src="" alt="linkdin">
-                    <img src="" alt="twitter">
+            <div class="footerlinks">
+                <div class="hotline">
+                    <h5>service hotline</h5>
+                    <p>Thelma Amacree</p>
+                    <a href="mailto:Afrinolly@gmail.com">Afrinolly@gmail.com</a>
+                </div>
+                <div class="pr">
+                    <h5>public relations inquiries</h5>
+                    <p>Ayo</p>
+                    <a href="mailto:Macleanafrinolly@gmail.com">Afrinolly@gmail.com</a>
+                </div>
+                <div class="headquaters">
+                    <h5>headquaters</h5>
+                    <p>No. 16, Sophie Kuye,Pedro, Lagos.+2347066453516</p>
+                </div>
+                <div class="hi">
+                    <h5>Say hi</h5>
+                    <a href="mailto:info@afrinolly">info@afrinolly</a>
+                </div>
+                <div class="social">
+                    <h5>social</h5>
+                    <p>You can always find us on social.</p>
+                    <!-- <div class="socials">
+                        <img src="" alt="youtube">
+                        <img src="" alt="instagram">
+                        <img src="" alt="linkdin">
+                        <img src="" alt="twitter">
+                    </div> -->
+                </div>
+                <div class="terms">
+                    <p>&copy; <span>2022</span>afrinolly. All rights reserved <span>Privacy</span> <span>Terms &
+                            condition</span> </p>
                 </div>
             </div>
-            <div class="terms">
-                <p>&copy; <span>2022</span>afrinolly. All rights reserved <span>Privacy</span> <span>Terms &
-                        condition</span> </p>
-            </div>
-        </div>
 
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </html>
