--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap'); */
+
 
 *{
     margin: 0;
@@ -167,7 +167,7 @@ body{
     grid-column: 1/3;
     grid-row: 6/7;
     margin-top: 20px;
-    background: linear-gradient(to top,rgba(0, 0, 0, 0.63), #f2bf3315);
+    /* background: linear-gradient(to top,rgba(0, 0, 0, 0.63), #f2bf3315); */
 
    
 }
@@ -226,35 +226,42 @@ body{
    bottom: -20px;
 }
 footer{
-    
-    display: flex;
+    margin-top: 35px;
+    grid-column: 1/4;
+    grid-row: 8/9;
+    background-color: #F2C033;
+    /* display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
     padding: 0 10px;
     background: #F2C033;
     margin-top: 30px;
-    position: relative;
+    position: relative; */
 }
 .querys a{
     color: #fff;
-    padding: .5em;
+    padding: .2em;
     border: 1px solid #fff;
     font-size: 25px;
     font-weight: 800;
     font-family: 'Khand', sans-serif;
     transition: 0.3s;
-    margin-top: -20px;
+    /* margin-top: -60px; */
     text-decoration: none;
+    
    
 }
 .footerlinks{
     color: #000;
     font-size: 1.2em;
 }
+.footerlinks> div{
+    padding: .5em;
+}
 .footerlinks > div > h5{
     font-family: 'Khand', sans-serif;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 .footerlinks > div > p{
     font-family: 'Mulish', sans-serif;
@@ -558,7 +565,9 @@ footer{
         font-family: 'Mulish', sans-serif;
     }
     footer{
-
+        grid-column: 1/4;
+        grid-row: 8/9;
+        background-color: #F2C033;
         /* grid-column: 1/4;
         grid-row: 7/8; */
         background-color: #F2C033;
@@ -738,14 +747,12 @@ footer{
         }
         .landing{
             grid-column: 1/4;
-
         }
         .call{
             grid-column: 1/4;
         }
         .purpose{
             grid-column: 1/4;
-
         } */
 
     }
