--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -29,9 +29,9 @@ body{
 /*  */
 
 @media screen and (max-width: 650px){
-/* *{
+*{
     font-size: 16px;
-} */
+}
 .wrapper{
     padding-left: 1em;
     padding-right: 1.5em;
